<resources>
    <string name="app_name">DemoUI</string>
    <string name="back_icon">back_icon</string>
    <string name="cart_icon">cart_icon</string>
    <string name="search_icon">search_icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jackets">Jackets</string>
    <string name="chip_all">All</string>
    <string name="sweaters">Sweaters</string>
    <string name="skinny_pants">Skinny pants</string>
    <string name="jeans">Jeans</string>
    <string name="shoes">Shoes</string>
    <string name="product_image">product_image</string>
    <string name="favorite">favorite</string>
    <string name="woman_trousers_short">[Woman] Trousers short</string>
    <string name="price">1.700.000đ</string>
    <string name="filter">filter</string>
    <string name="happy">#happy</string>
    <string name="clothes">#clothes</string>
    <string name="date_filter">date_filter</string>
    <string name="new_2">New</string>
    <string name="_12">12%</string>
    <string name="_1">1</string>
    <string name="todo1">TODO</string>
    <string name="person">Person</string>
    <string name="jacket">#Jacket</string>
    <string name="todo">TODO</string>
</resources>