<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Fragment1">

    <HorizontalScrollView
        android:id="@+id/startHorizontal"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:scrollbars="none"
        android:layout_marginTop="10dp"
        tools:ignore="MissingConstraints">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_category"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_all"
                android:layout_width="47dp"
                android:layout_height="31dp"
                android:text="@string/chip_all"
                style="@style/CustomChipStyle"
                android:background="@drawable/indicator"
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_jackets"
                android:layout_width="71dp"
                android:layout_height="match_parent"
                android:text="@string/jackets"
                style="@style/CustomChipStyle"
                android:textSize="12sp"
                android:gravity="center_horizontal"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_sweater"
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:text="@string/sweaters"
                style="@style/CustomChipStyle"
                android:textSize="12sp"
                android:gravity="center_horizontal"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_skinny_paits"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:text="@string/skinny_pants"
                style="@style/CustomChipStyle"
                android:textSize="12sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_jeans"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/jeans"
                style="@style/CustomChipStyle"
                android:textSize="12sp"
                android:gravity="center_horizontal"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_shoes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/shoes"
                style="@style/CustomChipStyle"
                android:textSize="12sp"
                android:gravity="center_horizontal"/>

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp"
        android:orientation="horizontal">
        <ImageView

            android:id="@+id/iv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/iv_filter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:contentDescription="@string/filter" />

        <ImageView
            android:id="@+id/iv_date_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/date_filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/date_filter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_seller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>