<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="144dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/_1"
        android:fontFamily="@font/lexend_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="6dp"
        android:paddingStart="7dp"
        android:paddingEnd="6dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:textSize="14sp"
        android:background="@color/black"
        android:gravity="center"
        android:paddingLeft="7dp"
        android:paddingRight="6dp" />
    <ImageView
        android:id="@+id/iv_rank"
        android:layout_width="18dp"
        android:layout_height="15dp"
        android:src="@drawable/up"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_number"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/person"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#1a1a1a"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lexend_bold"/>
    <TextView
        android:id="@+id/tv_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#9a9a9a"
        android:textSize="12sp"
        android:text="@string/jacket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintEnd_toStartOf="@id/iv_profile"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/lexend_regular"/>

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/profile"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>