<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="162dp"
    android:layout_height="282dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:id="@+id/iv_product"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"
        android:src="@drawable/product_1"
        android:contentDescription="@string/product_image" />

    <CheckBox
        android:id="@+id/cb_favorite"
        android:layout_width="22sp"
        android:layout_height="20.84sp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="0.5dp"
        android:layout_marginRight="1.5dp"
        android:background="@drawable/checkbox_selector"
        android:button="@null"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_newproduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_2"
        android:textSize="10sp"
        android:gravity="center"
        android:textColor="#1A1A1A"
        android:background="@color/white"
        android:lineHeight="12.5sp"
        app:layout_constraintStart_toStartOf="@id/iv_product"
        app:layout_constraintBottom_toBottomOf="@id/iv_product"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="5.5dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        app:layout_goneMarginStart="4dp"
        app:layout_goneMarginBottom="4.5dp"
        android:fontFamily="@font/lexend_regular"
        tools:ignore="SmallSp"
        android:visibility="invisible"
        tools:targetApi="p" />

    <TextView
        android:id="@+id/tv_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_12"
        android:textSize="10sp"
        android:gravity="center"
        android:fontFamily="@font/lexend_semibold"
        android:textColor="@color/white"
        android:background="@drawable/textview_percent"
        app:layout_constraintStart_toEndOf="@id/tv_newproduct"
        app:layout_constraintBottom_toBottomOf="@id/iv_product"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="5.5dp"
        android:paddingEnd="4dp"
        android:paddingStart="4dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:ignore="SmallSp" />
    <TextView
        android:id="@+id/tv_product_info"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:text="@string/woman_trousers_short"
        android:textSize="12sp"
        android:lineHeight="15sp"
        android:fontFamily="@font/lexend_regular"
        app:layout_constraintTop_toBottomOf="@id/iv_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#1A1A1A"
        android:layout_gravity="center"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"
        tools:targetApi="p" />
    <TextView
        android:id="@+id/tv_old_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="10sp"
        android:lineHeight="12.5sp"
        android:fontFamily="@font/lexend_regular"
        app:layout_constraintTop_toBottomOf="@id/tv_product_info"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#C9C9C9"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        tools:ignore="SmallSp"
        tools:targetApi="p" />
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_old_price"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/price"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#1A1A1A"
        android:lineHeight="17.5sp"
        tools:targetApi="p"
        android:fontFamily="@font/lexend_bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>